# store-api-rs

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
resources/config/: config.example.yml
resources/db/: 2022-12-02-01.sql
src/: main.rs
src/config/: app_config.rs  auth_config.rs  db_config.rs  mod.rs  router_config.rs
src/mapper/: goods_mapper.rs  mod.rs
src/model/: mod.rs
src/model/common/: mod.rs  response_result.rs  table_info.rs
src/model/entity/: goods.rs
src/service/: app_version_service.rs  goods_service.rs  index_service.rs  mod.rs
src/util/: file_util.rs  mod.rs
tests/: test.rs
