[package]
name = "store-api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
futures-util = "0.3"
actix-web = "4"

time = { version = "0.3", features = ["macros"] }
rust_decimal = "1.27"
rust_decimal_macros = "1.27"

lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tracing-actix-web = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

rusqlite = { version = "0.28.0", features = ["bundled"] }
deadpool-sqlite = "0.5.0"

uuid = "1.2.2"
